--- a/src/app/addevenement/addevenement.component.html
+++ b/src/app/addevenement/addevenement.component.html
@@ -1,1 +1,151 @@
+<app-head></app-head>
+<app-header></app-header>
+<br><br><br>
+<app-addeventslider></app-addeventslider><br>
+<div class="home page-template page-template-template page-template-homepage-template page-template-templatehomepage-template-php page page-id-10 sidebar-active elementor-default elementor-kit-2411 elementor-page elementor-page-10 e--ua-firefox" style="background-color: #1a1831;"
+    data-elementor-device-mode="desktop">
+    <div class="body-innner-content ">
+        <div data-elementor-type="wp-post" data-elementor-id="10" class="elementor elementor-10"
+            data-elementor-settings="[]">
+            <div _ngcontent-yjn-c66="" class="elementor-inner">
+                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" class="elementor-section-wrap">
+                    <form _ngcontent-krf-c66="" novalidate="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                            id="mc4wp-form-1" method="post" data-id="828" data-name=""
+                            class="mc4wp-form mc4wp-form-828 ng-untouched ng-pristine ng-valid">
+                    <div class="row">  
+                        <div class="col-md-5 col-lg-1"> </div> 
+                        
+                        <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-5 col-lg-3">
+                        
+                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                class="mc4wp-form-fields">
+                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                    class="ts-footer-info-box text-center"><span _ngcontent-krf-c66=""
+                                        _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="box-border"></span>
+                                    <h3 _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                        class="widget-title">Add Event </h3>
+                                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                        class="intro-form">
+                                        <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                            id="ts-contactMe" class="contactMe small">
+                                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                                class="form-row">
+                                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                                    class="col-md-12"><input _ngcontent-krf-c66="" type="text"
+                                                        name="NAME" data-displayname="Event Name"
+                                                        placeholder="Event Name" required="" class="field"></div>
+                                            </div>
+                                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                                class="form-row form-row-second">
+                                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                                    class="col-md-12"><input _ngcontent-krf-c66="" type="text"
+                                                        name="title" data-displayname="Event Title"
+                                                        placeholder="Event Title" required="" class="field"></div>
+                                            </div>
+                                            <div _ngcontent-krf-c66="" class="form-row form-row-second">
+                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
+                                                        _ngcontent-krf-c66="" type="textarea" name="description"
+                                                        data-displayname="Event Description"
+                                                        placeholder="Event Description" required=""></div>
+                                            </div>
+                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
+                                                    _ngcontent-krf-c66="">Event Starting Date :<br
+                                                        _ngcontent-krf-c66=""></b>
+                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
+                                                        _ngcontent-krf-c66="" type="date" name="datestart"
+                                                        data-displayname="Event Starting Date"
+                                                        placeholder="Event Starting Date" required=""></div>
+                                            </div>
+                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
+                                                    _ngcontent-krf-c66="">Event Ending Date :<br
+                                                        _ngcontent-krf-c66=""></b>
+                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
+                                                        _ngcontent-krf-c66="" type="date" name="dateend"
+                                                        data-displayname="Event Ending Date"
+                                                        placeholder="Event Ending Date" required=""></div>
+                                            </div>
+                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
+                                                    _ngcontent-krf-c66="">Event Avariable Places :<br
+                                                        _ngcontent-krf-c66=""></b>
+                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
+                                                        _ngcontent-krf-c66="" type="number" name="npDisponible"
+                                                        data-displayname="npDisponible"
+                                                        placeholder="Event Avariable Places.." required=""></div>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        
+                    </div>
+                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-5 col-lg-3">
+                        
+                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                class="mc4wp-form-fields">
+                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                    class="ts-footer-info-box text-center"><span _ngcontent-krf-c66=""
+                                        _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="box-border"></span>
+                                    <h3 _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                        class="widget-title"> </h3>
+                                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                        class="intro-form">
+                                        <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                            id="ts-contactMe" class="contactMe small">
+                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
+                                                _ngcontent-krf-c66="">Event Max Places :<br
+                                                    _ngcontent-krf-c66=""></b>
+                                            <div _ngcontent-krf-c66="" class="col-md-12"><input
+                                                    _ngcontent-krf-c66="" type="number" name="npMax"
+                                                    data-displayname="npMax" placeholder="Event Max Places.."
+                                                    required=""></div>
+                                        </div>
+                                            <div class="form-row form-row-second"><b>Event Type:<br></b>
+                                                <div class="col-md-12"><input type="option" name="npMax" data-displayname="npMax" placeholder="Event Type.." required=""
+                                                        ></div>
+                                            </div>
+                                            
+                                            <div class="form-row form-row-second"><b>Event is With Troopy ?<br></b>
+                                                <div class="col-md-12"><input type="option" name="trouphy" data-displayname="trouphy" placeholder="Event Troophy.." required=""
+                                                        ></div>
+                                            </div>
+                                            <div class="form-row form-row-second"><b>Event Tags:<br></b>
+                                                <div class="col-md-12"><input type="option" name="eventTags" data-displayname="eventTags" placeholder="Event Tags.." required=""
+                                                        ></div>
+                                            </div>
+                                            <div class="form-row form-row-second"><b>Event Points:<br></b>
+                                                <div class="col-md-12"><input type="option" name="eventpoints" data-displayname="eventpoints" placeholder="Event points.." required=""
+                                                        ></div>
+                                            </div>
+                                            
+                                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                                class="col-md-12 form-btn"><button _ngcontent-krf-c66=""
+                                                    _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" type="submit"
+                                                    data-sending="Sending..." data-text="get discount"
+                                                    class="btn btn-bordered">Confirm <i _ngcontent-krf-c66=""
+                                                        _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
+                                                        class="fa fa-check"></i></button></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        
+                    </div>
+                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-2 col-lg-1">
+                     
+                      </div>
+                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-5 col-lg-3">
+                        <br><br><br><br>
+                  <img src="assets/AddEventIllustration.png">
+                </div>
+                </div>
+            </form>
+                </div>
+            </div>
 
+        </div>
+    </div>
+</div>
+
+<app-footer></app-footer>
+<app-scripts></app-scripts>
