Project Base Page Update

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -4,9 +4,9 @@
           <div class="col-md-6 col-lg-4">
              <div class="footer-left-widget"><img src="/assets/Logo.png" class="image wp-image-220  attachment-full size-full" alt="" loading="lazy" style="max-width: 100%; height: auto;" width="150" height="42"></div><div class="footer-left-widget">			<div class="textwidget"><h3>Head Office</h3>
 <ul>
-<li>1010 Avenue, NY, USA</li>
-<li>Tel :&nbsp;<span>009-215-5596</span></li>
-<li>Email :&nbsp;<span>info@example.com</span></li>
+<li>Esprit Ariana,Technopol</li>
+<li>Tel :&nbsp;<span>+(216)58205523</span></li>
+<li>Email :&nbsp;<span>workmood@gmail.com</span></li>
 </ul>
 <h3>Business Hour</h3>
 <p>Monday To Friday 07.00 – 16.00</p>
@@ -67,9 +67,7 @@ window.mc4wp = window.mc4wp || {
                                </div>
                            </div>
                        </div>
-                       <h4 class="call-us">or
-                           <span> Call Us : (210) 224-8484</span>
-                       </h4>
+                     
                    </div>
 </div><label style="display: none !important;">Leave this field empty if you're human: <input type="text" name="_mc4wp_honeypot" tabindex="-1" autocomplete="off"></label><input type="hidden" name="_mc4wp_timestamp" value="1650217745"><input type="hidden" name="_mc4wp_form_id" value="828"><input type="hidden" name="_mc4wp_form_element_id" value="mc4wp-form-1"><div class="mc4wp-response"></div></form><!-- / Mailchimp for WordPress Plugin -->               </div>
           <!-- End Col -->
