--- a/src/app/Components/latestmedia/latestmedia.component.html
+++ b/src/app/Components/latestmedia/latestmedia.component.html
@@ -22,8 +22,28 @@ Latest Media​                             </h2>
 </div>
 </section>
 <section class="elementor-section elementor-top-section elementor-element elementor-element-b30ff9d elementor-section-boxed elementor-section-height-default elementor-section-height-default animated fadeInUp" data-id="b30ff9d" data-element_type="section" data-settings="{&quot;animation_delay&quot;:350,&quot;animation&quot;:&quot;fadeInUp&quot;}">
-    <div class="elementor-container elementor-column-gap-default">
+   <div class="row">
+      <div class="col-lg-12">
+                             <div class="recent-folio-menu">
+             <ul>
+                                                 
+                                                                                     <li class="filter active" data-filter=".bridge">Posts</li>
+                                                                                     
+                                                                                     <li class="filter" data-filter=".minning">Events</li>
+                                                 
+                                                                                     <li class="filter" data-filter=".minning">Subscriptions</li>
+      
+                                                                                     <li class="filter" data-filter=".minning">Surveys</li>
+      
+                                                 
+                                           </ul>
+          </div>
+                      </div>
+      </div> 
+   <div class="elementor-container elementor-column-gap-default">
+       
         <div class="elementor-row">
+           
 <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-8fe6cdb" data-id="8fe6cdb" data-element_type="column">
 <div class="elementor-column-wrap elementor-element-populated">
         <div class="elementor-widget-wrap">
