--- a/src/app/Components/latestupdates/latestupdates.component.html
+++ b/src/app/Components/latestupdates/latestupdates.component.html
@@ -9,7 +9,7 @@
  <div class="section-heading-content">
 <h2 class="section-title">
 <span class="sub-title">Our Works</span>
-Latest Projects                             </h2>
+Latest Updates                             </h2>
 </div><!-- Section title -->		
 
 
@@ -34,15 +34,16 @@ Latest Projects                             </h2>
 <div class="col-lg-12">
                        <div class="recent-folio-menu">
        <ul>
-                                                                               <li class="filter active" data-filter="all"> All Projects </li>
+                                                                               <li class="filter active" data-filter="all"> All Features </li>
                                            
-                                                                               <li class="filter" data-filter=".bridge">Bridge</li>
+                                                                               <li class="filter" data-filter=".bridge">Articles</li>
+                                                                               
+                                                                               <li class="filter" data-filter=".minning">Offers</li>
                                            
-                                                                               <li class="filter" data-filter=".building">Building</li>
-                                           
-                                                                               <li class="filter" data-filter=".home">Home</li>
-                                           
-                                                                               <li class="filter" data-filter=".minning">Minning</li>
+                                                                               <li class="filter" data-filter=".minning">Collaborations</li>
+
+                                                                               <li class="filter" data-filter=".minning">Ratings</li>
+
                                            
                                      </ul>
     </div>
