--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -17,7 +17,7 @@
                                                     <ul class="header-nav-right-info">
                                 <li>
                                                                             <i class="fa fa-phone2"></i>
-                                        <span> +1 (212) 255-5511 </span>
+                                        <span> +216 58205523 </span>
                                         Make a call                                    
                                 </li>
                                 <li>
@@ -28,7 +28,7 @@
                                                                     </li>
                                 <li>
                                                                             <i class="fa fa-map-marker1"></i>
-                                        <span> 1105 Roosevelt Street CA </span>
+                                        <span> Esprit Ariana,Technopol </span>
                                         Get Dirction                                    
                                 </li>
                             </ul>
@@ -51,20 +51,20 @@
 
 	<div id="primary-nav" class="collapse navbar-collapse"><ul id="main-menu" class="navbar-nav"><li id="menu-item-159" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-159 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Home</a>
 </li>
-<li id="menu-item-160" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-160 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Colaboration<i class="fa fa-angle-down"></i></a>
-<li id="menu-item-173" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-173 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">NewsFeed<i class="fa fa-angle-down"></i></a>
+<li id="menu-item-160" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-160 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Colaboration</a>
+<li id="menu-item-173" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-173 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">NewsFeed</a>
 <li id="menu-item-187" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-187 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services<i class="fa fa-angle-down"></i></a>
   <ul class="dropdown-menu">
     <li id="menu-item-2078" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/" class=" dropdown-item">Events</a></li>
     <li id="menu-item-2076" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/" class=" dropdown-item">Offers</a></li>
     <li id="menu-item-2077" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/" class=" dropdown-item">Subscriptions</a></li>
   </ul>
-<li id="menu-item-200" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-200 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Features<i class="fa fa-angle-down"></i></a>
+<li id="menu-item-200" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-200 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Features</a>
 <li id="menu-item-203" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-203 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Forum<i class="fa fa-angle-down"></i></a>
 <ul class="dropdown-menu">
 	<li id="menu-item-2078" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="https://demo.themewinter.com/wp/buildbench/blog/category/building/" class=" dropdown-item">Blogs</a>	</li><li id="menu-item-2080" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2080 nav-item"><a href="https://demo.themewinter.com/wp/buildbench/blog/category/house/" class=" dropdown-item">Articles</a>	</li><li id="menu-item-2133" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-2133 nav-item"><a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/" class=" dropdown-item">Survey</a></li></ul>
 </li>
-<li id="menu-item-206" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-206 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contact<i class="fa fa-angle-down"></i></a>
+<li id="menu-item-206" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-206 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contact</a>
 </li>
 </ul></div>
 
@@ -75,7 +75,7 @@
                         </li>
                     
                                             <li class="nav-button" style="background-color: #1fb79b;">
-                            <a href="#" class="quote-btn"> Get a quote                            </a>
+                            <a href="#" class="quote-btn"> Click To Login                           </a>
                         </li>
                     
                 </ul><!-- Right menu end -->
