--- a/src/app/Components/homeslider/homeslider.component.html
+++ b/src/app/Components/homeslider/homeslider.component.html
@@ -7,7 +7,8 @@
     <div class="elementor-element elementor-element-ffe759a elementor-widget elementor-widget-buildbench-slider" data-id="ffe759a" data-element_type="widget" data-widget_type="buildbench-slider.default">
 <div class="elementor-widget-container">
     <div data-controlsbox="{'slide_autoplay':'yes','slider_nav_show':'yes'}" id="hero-slider" class="hero-slider owl-carousel features-slider owl-loaded owl-drag">                 
-<div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-7612px, 0px, 0px); transition: all 2s ease 0s; width: 13321px;" [class.animate]="componentLoaded"><div class="owl-item cloned" style="width: 1903px;"><div class="slider-item" style="background-image: url(http://demo.themewinter.com/wp/buildbench/wp-content/uploads/2019/03/slider6-2.jpg);">
+<div class="owl-stage-outer">
+    <div class="owl-stage" style="transform: translate3d(-7612px, 0px, 0px); transition: all 2s ease 0s; width: 13321px;" [class.animate]="componentLoaded"><div class="owl-item cloned" style="width: 1903px;"><div class="slider-item" style="background-image: url(http://demo.themewinter.com/wp/buildbench/wp-content/uploads/2019/03/slider6-2.jpg);">
 <div class="hero-table">
 <div class="hero-table-cell">
 <div class="container" >
@@ -43,7 +44,7 @@
 <!-- hero table cell end -->
 </div>
 <!-- hero table end -->
-</div></div><div class="owl-item cloned" style="width: 1903px;"><div class="slider-item" style="background-image: url(BG1.jpg);">
+</div></div><div class="owl-item active" style="width: 1903px;" ><div class="slider-item" style="background-image: url(BG1.jpg);">
 <div class="hero-table">
 <div class="hero-table-cell">
 <div class="container">
