--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -63,7 +63,7 @@
                     
                 </div>
             </div>
-            <div _ngcontent-ssq-c56="" data-id="436f334" data-element_type="column"class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-436f334"> 
+            <div _ngcontent-ssq-c56="" data-id="436f334" data-element_type="column"class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-436f334" (click)="Events()"> 
                 <div _ngcontent-ssq-c56="" class="elementor-column-wrap elementor-element-populated">
                     <div _ngcontent-ssq-c56="" class="elementor-widget-wrap">
                         <div _ngcontent-ssq-c56="" data-id="b64c169" data-element_type="widget"
